adjusted css and html tags to minimize wasted code

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div class="benefits">
 
-        <div class="benefit-lead">
+        <div class="benefit-aside">
             <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" />
                     <p>
@@ -83,7 +83,7 @@
                     </p>
         </div>
 
-        <div class="benefit-brand">
+        <div class="benefit-aside">
             <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" />
                     <p>
@@ -92,7 +92,7 @@
                     </p>
         </div>
 
-        <div class="benefit-cost">
+        <div class="benefit-aside">
             <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png"></img>
                     <p>
