--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
 </head>
 
-<!--adding space between sections to help navigating the code-->
 <body>
 
+
     <div class="header">
-        
+            <!--brand-logo-->
         <h1>Hori<span class="seo">seo</span>n</h1>
-            <!--placing extra indentation for elements to further assist navigating code-->
+                <!--nav links to other sections of page-->
         <div>  
             <ul>
-                <li>
+                <li>                
                     <a href="#seo">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -34,13 +34,17 @@
     </div>
 
 
-    <div class="hero"></div>
+    <div class="hero">
+            <!--main hero image-->
+        <img alt="serious meeting with dollar store guy sebastian" src="./assets/images/digital-marketing-meeting.jpg">
+
+    </div>
 
     
     <div class="content">
                         <!--search engine optimization-->
         <div id="seo">
-            <img alt="meeting" src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img alt="seo and coffee brainstorm" src="./assets/images/search-engine-optimization.jpg" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                     <p>
                         The dominance of mobile internet use means that users are searching for the right business as they travel, 
@@ -50,7 +54,7 @@
         </div>
                         <!--online reputaion management-->
         <div id="orm">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img alt="reputation laptop" src="./assets/images/online-reputation-management.jpg" class="float-right" />
                 <h2>Online Reputation Management</h2>
                     <p>
                         The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet 
@@ -60,7 +64,7 @@
         </div>
                         <!--social media marketing-->
         <div id="smm">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img alt="social media meeting" src="./assets/images/social-media-marketing.jpg" class="float-left" />
                 <h2>Social Media Marketing</h2>
                     <p>
                         Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine 
@@ -73,7 +77,7 @@
 
 
     <div class="benefits">
-
+                <!--lead generation-->
         <div class="benefit-aside">
             <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" />
@@ -82,7 +86,7 @@
                         directly to your website.
                     </p>
         </div>
-
+                <!--brand awareness-->
         <div class="benefit-aside">
             <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" />
@@ -91,7 +95,7 @@
                         visibility for your business.
                     </p>
         </div>
-
+                <!--cost management-->
         <div class="benefit-aside">
             <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png"></img>
@@ -103,7 +107,7 @@
 
     </div>
 
-
+            <!--footer-->
     <div class="footer">
 
         <h2>Made with ❤️️ by Horiseon</h2>
