--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                 <!--nav links to other sections of page-->
         <div>  
             <ul>
-                <li>                
-                    <a href="#seo">Search Engine Optimization</a>
+                <li>        <!--search engine optimization-->       
+                    <a class="nav-link" href="#seo">Search Engine Optimization</a>
                 </li>
-                <li>
-                    <a href="#orm">Online Reputation Management</a>
+                <li>        <!--online reputation management-->
+                    <a class="nav-link" href="#orm">Online Reputation Management</a>
                 </li>
-                <li>
-                    <a href="#smm">Social Media Marketing</a>
+                <li>        <!--social media marketing-->
+                    <a class="nav-link" href="#smm">Social Media Marketing</a>
                 </li>
             </ul>
         </div>
@@ -48,7 +48,7 @@
                 <h2>Search Engine Optimization</h2>
                     <p>
                         The dominance of mobile internet use means that users are searching for the right business as they travel, 
-                        shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility 
+                        shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility
                         and find the right customers for your business.
                     </p>
         </div>
