--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <!--lead generation-->
         <div class="benefit-aside">
             <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" />
+                <img alt="money funel" src="./assets/images/lead-generation.png" />
                     <p>
                         Inbound strategies for lead generation require less work for your business, bringing customers 
                         directly to your website.
@@ -89,7 +89,7 @@
                 <!--brand awareness-->
         <div class="benefit-aside">
             <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
+                <img alt="visibility" src="./assets/images/brand-awareness.png" />
                     <p>
                         Users find your business through paid and organic searches, increasing the search ranking and 
                         visibility for your business.
@@ -98,7 +98,7 @@
                 <!--cost management-->
         <div class="benefit-aside">
             <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png"></img>
+                <img alt="money machine" src="./assets/images/cost-management.png"></img>
                     <p>
                         As the search ranking for your business increases, your advertising costs decrease, and you no 
                         longer need to advertise your page.
