final comments and readme updated, ready to deploy/submit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
 
 <head>
-
+        <!--meta tags, link to stylesheet and title of page-->
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon | SEO Management</title>
@@ -19,14 +19,14 @@
                 <!--nav links to other sections of page-->
         <div>  
             <ul>
-                <li>        <!--search engine optimization-->       
-                    <a class="nav-link" href="#seo">Search Engine Optimization</a>
+                <li>        <!--search engine optimization link to content section of page-->       
+                    <a class="nav-link" href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
-                <li>        <!--online reputation management-->
-                    <a class="nav-link" href="#orm">Online Reputation Management</a>
+                <li>        <!--online reputation management link to content section of page-->
+                    <a class="nav-link" href="#online-reputation-management">Online Reputation Management</a>
                 </li>
-                <li>        <!--social media marketing-->
-                    <a class="nav-link" href="#smm">Social Media Marketing</a>
+                <li>        <!--social media marketing link to content section of page-->
+                    <a class="nav-link" href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
         </div>
@@ -40,10 +40,10 @@
 
     </div>
 
-    
+            <!--central info section, links at top of page send user here-->
     <div class="content">
-                        <!--search engine optimization-->
-        <div id="seo">
+                        <!--search engine optimization section-->
+        <div id="search-engine-optimization">
             <img alt="seo and coffee brainstorm" src="./assets/images/search-engine-optimization.jpg" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                     <p>
@@ -52,8 +52,8 @@
                         and find the right customers for your business.
                     </p>
         </div>
-                        <!--online reputaion management-->
-        <div id="orm">
+                        <!--online reputaion management section-->
+        <div id="online-reputation-management">
             <img alt="reputation laptop" src="./assets/images/online-reputation-management.jpg" class="float-right" />
                 <h2>Online Reputation Management</h2>
                     <p>
@@ -62,8 +62,8 @@
                         over what potential customers see when they search for your business.
                     </p>
         </div>
-                        <!--social media marketing-->
-        <div id="smm">
+                        <!--social media marketing section-->
+        <div id="social-media-marketing">
             <img alt="social media meeting" src="./assets/images/social-media-marketing.jpg" class="float-left" />
                 <h2>Social Media Marketing</h2>
                     <p>
@@ -75,9 +75,9 @@
 
     </div>
 
-
+        <!--aside of right of page, all extra info here-->
     <div class="benefits">
-                <!--lead generation-->
+                <!--lead generation info-->
         <div class="benefit-aside">
             <h3>Lead Generation</h3>
                 <img alt="money funel" src="./assets/images/lead-generation.png" />
@@ -86,7 +86,7 @@
                         directly to your website.
                     </p>
         </div>
-                <!--brand awareness-->
+                <!--brand awareness info-->
         <div class="benefit-aside">
             <h3>Brand Awareness</h3>
                 <img alt="visibility" src="./assets/images/brand-awareness.png" />
@@ -95,7 +95,7 @@
                         visibility for your business.
                     </p>
         </div>
-                <!--cost management-->
+                <!--cost management info-->
         <div class="benefit-aside">
             <h3>Cost Management</h3>
                 <img alt="money machine" src="./assets/images/cost-management.png"></img>
